<resources>
    <string name="app_name">MyFilms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_name">MovieName</string>
    <string name="main">Main</string>
    <string name="favorites">Избранные</string>
    <string name="add_to_favorite">Добавить в избранные</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Авторизация</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="tag_white">white</string>
    <string name="tag_yellow">yellow</string>
    <string name="launch_trailer">Запустить трейлер</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="exit">Выход</string>
    <string name="home">Главная</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Оценить</string>
    <string name="rate">Рейтинг: %s</string>
    <string name="guest">Гость</string>
    <string name="name">Имя</string>
    <string name="save">Сохранить</string>
    <string name="surname">Фамилия</string>
    <string name="retry">Повторить</string>
    <string name="error">Ошибка</string>
    <string name="authorization_required">Требуется авторизация</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="no_permission">Требуется разрешение%s%s%s</string>
    <string name="camera">\" камера \"</string>
    <string name="gallery">\" галерея \"</string>
    <string name="quit_question">Выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_data">Введите данные</string>
    <string name="success">Успех</string>
    <string name="bad_request">Неверный запрос</string>
    <string name="unauthorized">Не зарегистрированный пользователь</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="timeout">Время ожидания вышло</string>
    <string name="internal_server_exception">Ошибка сервера</string>
    <string name="no_connection">Проверьте подключение к интеренету</string>
    <string name="service_unavailable">Сервис недоступен</string>
    <string name="gateway_timeout">Превышено время ожидания сервера</string>
    <string name="unknown_exception">Неизвестная ошибка</string>
</resources>