<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">

        <item
            android:id="@+id/movies_nav"
            android:icon="@drawable/ic_baseline_play_circle_outline_24"
            android:title="@string/home" />

        <item
            android:id="@+id/favorites_nav"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/favorites" />

        <item
            android:id="@+id/login_nav"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account" />

        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/exit" />

    </group>

    <item android:title="@string/communicate">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_baseline_description_24"
                    android:title="@string/about" />

                <item
                    android:id="@+id/rate_us"
                    android:icon="@drawable/ic_baseline_rate_review_24"
                    android:title="@string/rate_us" />

            </group>

        </menu>
    </item>

</menu>